<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">myBank</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- ALL STRINGS FOR DRAWER NAVIGATION -->
    <string name="String_drawer_open">Open Navigation Drawer</string>
    <string name="String_drawer_closed">Close Navigation Drawer</string>
    <string name="String_drawer_title">Menü</string>

    <!-- ALL STRINGS FOR EXPANDABLE LIST VIEW -->
    <string name="List_Buchung">Buchungen</string>
    <string name="List_Verlauf">Verlauf</string>
    <string name="List_Geplant">Geplant</string>
    <string name="List_Einstellungen">Einstellungen</string>
    <string name="List_Einstellung_Profil">Profil</string>
    <string name="List_Einstellung_Bencharichtigungen">Benachrichtigungen</string>
    <string name="List_Uebersicht">Übersicht</string>
    <string name="List_Kuchen">Kuchen</string>
    <string name="List_Gesamt">Gesamt</string>

    <!-- ALL STRINGS FOR ACTIVITY NAMES -->
    <string name="title_activity_booking">Buchung</string>
    <string name="title_activity_settings_profile">Profileinstellungen</string>
    <string name="title_activity_settings_notifications">Benachrichtigungseinstellungen</string>
    <string name="title_activity_settings_banking">Buchung</string>
    <string name="title_activity_history">Verlauf</string>
	<string name="title_activity_outlay">Geplant</string>
	<string name="title_activity_chart">Übersicht</string>
	<string name="title_activity_add">Profildaten</string>

    <!-- ALL STRINGS FOR STARTING-SCREEN -->
    <string name="AppName">myBank</string>
    <string name="AppSlogan">Consistency Pays</string>
   
    <!-- ALL STRINGS FOR PROFILE-DATA-SCREEN -->
    <string name="profile_data_name_text">Name</string>
    <string name="profile_data_lastname_text">Nachname</string>
    <string name="profile_data_save_button_text">Speichern</string>
    <string name="profile_prompt_name_hint">Name</string>
    <string name="profile_prompt_lastname_hint">Nachname</string>
    <string name="profile_prompt_name_text">Name:</string>
    <string name="profile_prompt_lastname_text">Nachname:</string>
    <string name="update_profile_prompt_title">Profil ausfüllen</string>
    <string name="profile_header_text">Mein Profil</string>
    <string name="profile_pic_description">Profilbild</string>
    <string name="all_incomes_text">Alle Einbuchungen:</string>
    <string name="all_expenses_text">Alle Ausgaben:</string>
    <string name="all_outlays_text">Alle Auslagen:</string>
    <string name="profile_data_app_installed_text">App installiert am:</string>
   
    <!-- ALL STRINGS FOR BOOKING-SCREEN -->
    <string name="String_TextView_Balance">Kontostand:</string>
    <string name="String_TextView_Scheduled_Booking">Vorgemerkt:</string>
    <string name="String_TextView_Goal">Sparziel:</string>
    <string name="String_TextView_Contents">0</string>
    <string name="String_Button_Add_Input">Einzahlung tätigen</string>
    <string name="String_Button_Add_Expense">Auszahlung tätigen</string>
    <string name="String_Button_Add_Standing_Order">Auszahlung vormerken</string>
    <string name="String_Button_Add_Goal">Ziel festlegen</string>

    <!-- ALL STRINGS FOR INCOME BOOKING PROMPT -->
    <string name="income_booking_prompt_title">Einbuchen</string>
    <string name="income_booking_prompt_ask_amount_text">Wieviel möchten Sie einbuchen?</string>
    <string name="income_booking_prompt_amount_input_hint_text">Euro</string>

    <!-- ALL STRINGS FOR EXPENSE BOOKING PROMPT -->
    <string name="expense_booking_prompt_title">Abbuchen</string>
    <string name="booking_prompt_amount_input_hint_text">Euro</string>
    <string name="booking_prompt_ask_amount_text">Wieviel möchten Sie abbuchen?</string>
    <string name="booking_prompt_ask_title_text">Zu welchem Zweck?</string>
    <string name="booking_prompt_ask_category_text">In welcher Ausgaben-Kategorie?</string>
    <string name="booking_prompt_title_hint_text">Wofür?</string>

    <!-- ALL STRINGS FOR EXPENSEBOOKING PROMPT CATEGORY SPINNER -->
    <string name="category_spinner_header_text">Wählen Sie eine Kategorie</string>
    
    <!-- ALL STRINGS FOR PROFILE NOTIFICATION PROMPT -->
	<string name="profile_notification_prompt_title">Profil unvollständig</string>
	<string name="profile_notification_prompt_infotext">Sie haben Ihr Profil noch nicht vollständig ausgefüllt</string>
	
	<!-- ALL STRINGS FOR GOAL ENDANGERED PROMPT -->
	<string name="goal_endangered_prompt_text">Sie laufen Gefahr ihr Sparziel zu verfehlen!</string>
	<string name="goal_endangered_prompt_title">Benachrichtigung</string>

    <string-array name="categories_array">
        <item>Beruf</item>
        <item>Studium</item>
        <item>Freizeit</item>
        <item>Haushalt</item>
        <item>Hobbys</item>
        <item>Sonstiges</item>
    </string-array>
    <string-array name="Menu_items">
        <item>Buchungen</item>
        <item>Verlauf</item>
        <item>Geplant</item>
        <item>Einstellungen</item>
        <item>Übersicht</item>
    </string-array>

    <!-- ALL STRINGS FOR PLANNED OUTLAY PROMPT -->
    <string name="outlay_prompt_title">Etwas beiseite legen</string>
    <string name="outlay_prompt_ask_amount_text">Wieviel möchten Sie beiseite legen?</string>
    <string name="outlay_prompt_amount_input_hint_text">Euro</string>
    <string name="outlay_prompt_ask_title_text">Für welche zukünftige Ausgabe?</string>
    <string name="outlay_prompt_title_input_hint_text">Zu welchem Zweck?</string>

    <!-- ALL STRINGS FOR GOAL PROMPT -->
    <string name="goal_update_prompt_title">Ein Ziel setzen</string>
    <string name="goal_prompt_ask_amount_text">Was möchten Sie als ihr (neues) Ziel setzen?</string>
    <string name="goal_prompt_amount_input_hint_text">Euro</string>

    <!-- ALL STRINGS FOR HISTORY-SCREEN -->


    <!-- ALL STRINGS FOR OUTLAY-SCREEN -->
    <string name="infotext_outlay">Sie löschen einzelne Auslagen durch einen langen Klick</string>

    <!-- ALL STRINGS FOR GOAL PROMPT -->
    <string name="outlay_delete_prompt_text">Haben Sie die Auslage nun auch ausgegeben?</string>

    <!-- ALL STRINGS FOR CHART-SCREEN -->


    <!-- ALL STRINGS FOR SETTINGS-NOTIFICATION-SCREEN -->
    <string name="Switch_Notification_on">Benachrichtigung festlegen</string>
    <string name="Switch_Notification_server">Auf Server speichern</string>
    <string name="Switch_Notification_goal_reached">Ziel erreicht</string>
    <string name="Switch_Notification_limit_reached">Limit erreicht</string>
    <string name="Switch_Notification_daily_reminder">Tägliche Erinnerung</string>
    <string name="Button_Set_Reminder">Erinnerung festlegen</string>
    
	<!-- ALL STRINGS FOR SETTINGS-PROFILE-SCREEN -->
    <string name="TextView_Profile_Vorname">Vorname:</string>
    <string name="TextView_Profile_Nachname">Nachname:</string>
    <string name="TextView_Profile_Vorname_Input">kein Text VORNAME</string>
    <string name="TextView_Profile_Nachname_Input">kein Text NACHNAME</string>
    <string name="TextView_Profile_Member_Since">Mitglied seit</string>
    <string name="TextView_Profile_Member_Since_Input">kein Text DATUM</string>
    <string name="TextView_Profile_Complete_Income">Gesamte Einzahlungen:</string>
    <string name="TextView_Profile_Complete_Income_Input">kein Text EINZAHLUNGEN</string>
    <string name="TextView_Profile_Complete_Expense">Gesamte Ausgaben:</string>
    <string name="TextView_Profile_Complete_Expense_Input">kein Text AUSGABEN</string>
    <string name="TextView_Profile_Complete_Savings">Gesamte Ersparnisse:</string>
    <string name="TextView_Profile_Complete_Savings_Input">kein Text ERSPARNISSE</string>

    <string name="Button_Edit_Profile">Profil bearbeiten</string>
    <string name="Button_Reset_Account">Profil zurücksetzen</string>
    
    
	<!-- ALL STRINGS FOR SETTINGS-BOOKING-SCREEN -->
	<string name="TextView_Settings_Banking_Change_Currency">Währung</string>

    <string name="TextView_Settings_Banking_Change_Limit">Limit ändern</string>
    <string name="TextView_Settings_Banking_Change_Goal">Ziel ändern</string>
    <string name="Button_Delete_History">Delete History</string>
    <string name="Button_Default_Settings">Default Settings</string>

    <!-- ALL STRINGS FOR SETTINGS-GENERAL-SCREEN -->

    <string name="income_booking_prompt_ask_title_text">Woher?</string>
    <string name="title_activity_notify_service">NotifyService</string>
    <string name="title_activity_custom_dialog">CustomDialogActivity</string>
    <string name="title_activity_base">BaseActivity</string>

</resources>
